--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Tax Management System</title>
+  <title>Prenatal & Child Immunization with SMS Notification</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/images/tax.png">
+  <link rel="icon" type="image/x-icon" href="assets/images/immune-system.png">
 </head>
 <body>
   <app-root></app-root>
